--- a/viconros/package.xml
+++ b/viconros/package.xml
@@ -3,7 +3,7 @@
   <name>viconros</name>
   <version>0.0.3</version>
   <description>"fetch data from vicon"</description>
-  <maintainer email="">Wolfgang Hoenig</maintainer>
+  <maintainer email="2223@zju.edu.cn">Wolfgang Hoenig</maintainer>
 
   <license>MIT</license>
 
